<resources>
    <string name="app_name">Bottom Navigation and Fragments</string>
    <string name="home_fragment">Home</string>
    <string name="profile_fragment">Profile</string>
    <string name="settings_fragment">Settings</string>
    <string name="register_button">Register</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="user_name">User Name</string>
    <string name="email">Email</string>
    <string name="account_already">Already have an account?</string>
    <string name="sign_in_sub"><u>Sign Up</u></string>
    <string name="log_in_sub"><u>Log In</u></string>
    <string name="hello">Hello!</string>
    <string name="welcome">Create your account for \n better Experience</string>
    <string name="welcome_login">Welcome Back, you have been \n  missed for long Time</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="log_in">Log In</string>
    <string name="sign_in">Sign Up</string>
    <string name="bloom_cap">BLOOM</string>
    <string name="home">Home</string>
    <string name="notification">Notifications</string>
    <string name="calendar">Calendar</string>
    <string name="profile">Profile</string>
    <string name="random_date">Feb 13, 2024</string>
    <string name="general_day_message">Look at what you did this day!</string>
    <string name="this_is_a_comment">This is a comment.</string>
    <string name="a_year_ago_today">A year ago today...</string>
    <string name="entry_example">Today we went to visit the London bridge it was so beautiful. We also saw...</string>
    <string name="edit"><u>Edit</u></string>
    <string name="done"><u>Done</u></string>
</resources>