<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:id="@+id/textViewHello"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/hello"
            android:textSize="38sp"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="76dp"/>

        <TextView
            android:id="@+id/textViewWelcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/welcome_login"
            android:textColor="@color/hintColor"
            android:textSize="15sp"
            android:layout_marginBottom="36dp"
            />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="306dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="307dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            />


        <Button
            android:id="@+id/login"
            android:layout_width="306dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/purple"
            android:text="@string/log_in"
            android:clickable="true"
            android:focusable="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_account"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="@color/textColor" />

            <TextView
                android:id="@+id/signInText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/sign_in_sub"
                android:textColor="@color/purple" />
        </LinearLayout>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>