<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/logo">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/logo" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="112dp"
            android:layout_marginTop="64dp"
            android:shadowColor="@color/black"
            android:shadowDx="5"
            android:shadowDy="5"
            android:shadowRadius="2"
            android:singleLine="false"
            android:text="@string/bloom_cap"
            android:textAppearance="@style/TextAppearance.AppCompat.Display3"
            android:textColor="#FFAECA"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/buttonContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="39dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/init_register"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/purple"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/register_button" />

            <Button
                android:id="@+id/init_login"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/purple"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/log_in" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
